Fix vertical alignment bugs with nav

--- a/style.css
+++ b/style.css
@@ -64,20 +64,20 @@ a:focus {
 
 .nav {
 	margin-bottom: 2rem;
-	padding: 0 2rem;
 	background-image: url(./imgs/gradient-bg.png);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	height:100px;
+	height: 4.25rem;
+	padding-top: 2rem;
 }
 
 .nav__logo {
+	display: flex;
+	align-items: center;
 	white-space: break-spaces;
-	margin-top: 40px;
 }
 
 .nav__mobile-title {
-	margin-top: 2rem;
 	font-size: 1.25rem;
 	font-weight: 700;
 	text-decoration: none;
@@ -87,6 +87,11 @@ a:focus {
 .nav__links {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+}
+
+.nav__link {
+	display: flex;
 	align-items: center;
 }
 
@@ -103,6 +108,7 @@ a:focus {
 	width: 100%;
 	height: 12rem;
 	margin-bottom: 2.5rem;
+	margin-top: -1rem;
 }
 
 .mobile-hero__logo {
@@ -184,6 +190,7 @@ a:focus {
 .footer {
 	text-align: center;
 	margin-top: 2rem;
+	margin-bottom: 3rem;
 	padding: 1rem 0.5rem;
 }
 
@@ -277,6 +284,8 @@ a:focus {
 
 
 	.nav {
+		padding: 2rem;
+		margin-bottom: 0;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -301,7 +310,7 @@ a:focus {
 	.content {
 		display: grid;
 		position: relative;
-		margin-top: 4rem;
+		margin-top: 0;
 		grid-template-columns: 1fr 1fr;
 		gap: 3rem;
 		padding: 2rem;
@@ -364,6 +373,7 @@ a:focus {
 		display: flex;
 		justify-content: space-between;
 		padding: 1rem;
+		margin-bottom: 1rem;
 	}
 
 	.copyright {
@@ -384,6 +394,14 @@ a:focus {
 		--color-accent: rgba(51, 51, 51, 1);
 		--color-accent-light: rgba(255, 173, 77, 1);
 		--color-accent-lighter: rgba(255, 185, 102, 0.09);
+	}
+
+	p {
+		opacity: 0.9;
+	}
+
+	.nav {
+		background-image: none;
 	}
 
 	.card__title h2 {
